@@ -7,6 +7,10 @@ module Mongoid
         @source_root ||= File.expand_path('../templates', __FILE__)
       end
   
+      def self.banner
+        "#{$0} mongoid:#{generator_name} #{self.arguments.map{ |a| a.usage }.join(' ')} [options]"
+      end
+  
       def create_model_file
         template 'model.rb', File.join('app/models', class_path, "#{file_name}.rb")
       end
