@@ -1,11 +1,17 @@
+require 'generators/mongo_db_base'
+
 module Mongoid
   module Generators
-    class SetupGenerator < Rails::Generators::NamedBase
-      argument :database, :type => :string, :default => 'my_db'
+    class SetupGenerator < MongoDatabase::Generators::Base
 
       def self.source_root
         @source_root ||= File.expand_path('../templates', __FILE__)
       end
+
+      def self.banner
+        "#{$0} mongoid:#{generator_name} #{self.arguments.map{ |a| a.usage }.join(' ')} [options]"
+      end
+
 
       def create_files
         template "mongoid.rb" , "config/initializers/mongoid.rb" 
